# bugzilla-readonly-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  test-local.sh
src/mcp_bugzilla/: __init__.py  mcp_utils.py  server.py
tests/: test_mcp_utils.py
